--- a/config.toml
+++ b/config.toml
@@ -88,7 +88,7 @@ theme = "aafu"
           \n \
           Passionate about applying my domain \
           knowledge of Kinesiology to produce data-driven solutions and \
-          insights, specifically in the areas of rehabilitation informatics \
+          insights, especially in the areas of rehabilitation informatics \
           and sport performance. \
           """
 
